chore: 🩹 Fix gitconfigs, making play the primary one and github the one to use in the work directory

--- a/play/dot_gitconfig.tmpl
+++ b/play/dot_gitconfig.tmpl
@@ -1,6 +1,6 @@
 [user]
     name = {{ .name }}
-    email = {{ .work_email }}
+    email = {{ .play_email }}
     signingkey = {{ onepasswordRead "op://private/github/public key" }}
 
 [gpg]
