--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -11,3 +11,9 @@
 
 [commit]
   gpgsign = true
+
+[includeIf "gitdir:~/work/**"]
+  path = ~/work/.gitconfig
+
+[includeIf "gitdir:~/play/**"]
+  path = ~/play/.gitconfig
